# python-client

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  coverage.yml  publish-pypi.yml  python-package.yml
disruptive/: __init__.py  authentication.py  datas.py  errors.py  events.py  log.py  logging.py  outputs.py  requests.py  response.py  responses.py  transforms.py  types.py
disruptive/dataconnector_configs/: __init__.py  dataconnector_configs.py
disruptive/events/: __init__.py  events.py
disruptive/resources/: claim.py  data_connector.py  dataconnector.py  device.py  emulator.py  event_history.py  eventhistory.py  organization.py  project.py  role.py  service_account.py  serviceaccount.py  stream.py
disruptive/types/: __init__.py  devices.py  events.py  roles.py
docs/: api-reference.rst  authentication.rst  conf.py  configuration.rst  errors.rst  events.rst  examples.rst  exceptions.rst  index.rst  quickstart.rst  resources.rst
docs/_static/: custom.css
docs/authentication/: authentication.rst  service_account_credentials.rst
docs/content/: quickstart.rst
docs/content/api-reference/: api-index.rst  authentication.rst  configuration.rst  events.rst  exceptions.rst
docs/content/api-reference/resources/: dataconnector.rst  device.rst  resources.rst  role.rst  serviceaccount.rst  stream.rst
docs/content/api-reference/resources/dataconnector/: dataconnector.rst
docs/content/api-reference/resources/device/: device.rst  reported.rst
docs/content/api-reference/resources/emulator/: emulator.rst
docs/content/api-reference/resources/eventhistory/: eventhistory.rst
docs/content/api-reference/resources/organization/: organization.rst
docs/content/api-reference/resources/project/: project.rst
docs/content/api-reference/resources/role/: role.rst
docs/content/api-reference/resources/serviceaccount/: key.rst  serviceaccount.rst
docs/content/api-reference/resources/stream/: stream.rst
docs/content/examples/: examples.rst  get-device.rst  plot-temperatures.rst
docs/examples/: examples.rst  fetch_event_history.rst  get_device.rst  plot-temperatures.rst  plot_sensor_data.rst  sensor-temperatures.rst  threaded-stream.rst  threaded_stream.rst
docs/resources/: data_connector.rst  device.rst  eventhistory.rst  organization.rst  project.rst  resources.rst  role.rst  service_account.rst
docs/resources/data_connector/: data_connector.rst  http_push_config.rst  metrics.rst
docs/resources/dataconnector/: dataconnector.rst  metrics.rst
docs/resources/device/: device.rst  reported.rst
docs/resources/emulator/: emulator.rst
docs/resources/eventhistory/: eventhistory.rst
docs/resources/organization/: organization.rst
docs/resources/project/: project.rst
docs/resources/role/: role.rst
docs/resources/service_account/: key.rst  service_account.rst
docs/resources/serviceaccount/: serviceaccount.rst
docs/resources/stream/: stream.rst
examples/: fetch_2nd_gen_temperature_history.py  fetch_event_history.py  get_device.py  get_single_device.py  plot_sensor_data.py  plot_temperatures.py  publish_2nd_gen_temperature.py  sensor_temperatures.py  threaded_stream.py
tests/: api_responses.py  conftest.py  framework.py  mock_responses.py  test_auth.py  test_claim.py  test_data_connector.py  test_dataconnector.py  test_device.py  test_emulator.py  test_errors.py  test_eventhistory.py  test_events.py  test_logging.py  test_organization.py  test_outputs.py  test_project.py  test_requests.py  test_role.py  test_service_account.py  test_serviceaccount.py  test_stream.py  test_transforms.py
