[metadata]
name = disruptive
version = 0.0.0
description = Wrapper for the Disruptive Technologies REST API.
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, LICENSE
author = Disruptive Technologies Research AS
author_email = developer-support@disruptive-technologies.com
keywords =
    disruptive
    technologies
    dt
    rest
    api
license_file = LICENSE
classifiers = 
    License :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
install_requires =
    requests >= 2.19.0, < 3.0.0
    pyjwt >= 2.0.0, < 3.0.0
packages = disruptive

[options.extras_require]
dev =
    setuptools>=54.2.0
    wheel>=0.36.2
    tox>=3.0.0
    pytest>=6.2.2
    pytest-mock>=3.5.1
    mypy>=0.812
    flake8>=3.9.0
    sphinx==3.5.3
