[metadata]
name = disruptive
version = attr: disruptive.__version__
description = Disruptive Technologies Python API.
long_description_content_type = text/markdown
long_description = file: README.md
author = Disruptive Technologies Research AS
author_email = developer-support@disruptive-technologies.com
url = https://github.com/disruptive-technologies/disruptive-python
project_urls =
    Documentation=https://developer.disruptive-technologies.com/api/libraries/python/
    Developers Page=https://developer.disruptive-technologies.com/docs/
keywords =
    disruptive
    technologies
    dt
    rest
    api
license_file = LICENSE
classifiers = 
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    requests >= 2.19.0, < 3.0.0
    pyjwt >= 2.0.0, < 3.0.0
include-package-data = True
packages = find:

[options.package_data]
disruptive = py.typed

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    setuptools>=54.2.0
    wheel>=0.36.2
    pytest>=6.2.2
    pytest-mock>=3.5.1
    pytest-cov>=2.11.1
    mypy>=0.812
    flake8>=3.9.0

extra =
    pandas >= 2.0.0, < 3.0.0
    polars
